# modloader

./: .gitattributes  .gitignore  .gitignore~  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt~  LICENSE  Makefile~  README.md  TODO  build.sh~  cmake.sh~  make.sh~  makefile~  premake5.lua  release.bat  release.lua  toolchain-linux-i486-mingw32-toolchain.cmake  toolchain-linux-i486-mingw32-toolchain.cmake~
doc/: CHANGELOG.md  (+15 more)
src/: AddressTranslator.h  CMakeLists.txt  CMakeLists.txt~  DataTraits.hpp  GameInfo.h  Injector.h  charov.hpp  main.cpp  ordered_map.hpp  source_files.sh~
src/Game Structs/: AudioFileExt.h  C2dfx.h  C3DMarker.h  CAEBankLoader.h  CAiTimer.h  CAnimBlendSequence.h  CAnimGroup.h  CAnimationStyleDescriptor.h  CAudio.h  CAudioEngine.h  CAudioFile.h  CAudioFileVorbis.h  CAudioFileVtbl.h  CAudioFileWav.h  CAudioFileWindowsMedia.h  CAudioStream.h  CAutomobile.h  CAutomobile_VTBL.h  CBaseModelInfo.h  CBaseModelInfo_VTBL.h  CBike.h  CBike_VTBL.h  CBird.h  CBoat.h  CBulletTrace.h  CCam.h  CCamera.h  CCamera_obj2.h  CCheckpoint.h  CClothesInfo.h  CColLine.h  CColModel.h  CCollisionFile.h  CComponentLinks.h  CCullZone.h  CCullZoneBase.h  CCullZoneReflection.h  CDamageManager.h  CDecisionMakerMgr.h  CDecisionMakers.h  (+324 more)
src/address_translator/: CMakeLists.txt  translator.cpp
src/address_translator/gta3/3/: 10.hpp
src/address_translator/gta3/sa/: 10us.hpp
src/address_translator/gta3/vc/: 10.hpp
src/core/: CMakeLists.txt  CMakeLists.txt~  CModLoader.hpp  LogException.cpp  config.cpp  exception.cpp  folder.cpp  init.s  loader.cpp  loader.hpp  logging.cpp  main.cpp  menu.cpp  modinfo.cpp  plugins.cpp  profiles.cpp  shared.cpp  stdinc.hpp  watcher.cpp  wildcard.cpp
src/core/extras/gta3/: menu.cpp  menu.hpp
src/injector/: assembly.hpp  calling.hpp  hooking.hpp  injector.hpp  utility.hpp
src/injector/game/: fxt.hpp  fxt_parser.hpp  saving.hpp
src/injector/gvm/: gvm.hpp  translator.hpp
src/plugins/: CMakeLists.txt  CMakeLists.txt~  config.ini~  template.cpp
src/plugins/gta3/: CMakeLists.txt
src/plugins/gta3/std.asi/: CMakeLists.txt  CsInfo.cpp  ModuleInfo.cpp  asi.cpp  asi.h
src/plugins/gta3/std.bank/: CAECustomBankLoader.cpp  CAECustomBankLoader.hpp  CMakeLists.txt  main.cpp  stdinc.hpp
src/plugins/gta3/std.data/: CMakeLists.txt  cache.cpp  cache.hpp  data.hpp  data_traits.hpp  datalib.hpp  file_detour.hpp  handling.cpp  lazy_gta.cpp  main.cpp  stdinc.hpp  utility.hpp  vfs.hpp
src/plugins/gta3/std.fx/: CMakeLists.txt  fx.cpp
src/plugins/gta3/std.img/: CMakeLists.txt  img.cpp  streaming.cpp
src/plugins/gta3/std.movies/: movies.cpp
src/plugins/gta3/std.scm/: CMakeLists.txt  scm.cpp
src/plugins/gta3/std.sprites/: CMakeLists.txt  sprites.cpp
src/plugins/gta3/std.stream/: CMakeLists.txt  backend.cpp  data.cpp  directory.cpp  main.cpp  plugin.cpp  refresh.cpp  stdinc.hpp  streaming.cpp  streaming.hpp
src/plugins/gta3/std.text/: text.cpp
src/plugins/gta3/std.tracks/: CMakeLists.txt  stdinc.hpp  tracks.cpp
src/plugins/std-asi/: CMakeLists.txt  CsInfo.cpp  ModuleInfo.cpp  args_translator.hpp  asi.cpp  asi.h
src/plugins/std-asi/args_translator/: translator.hpp  translator_basic.hpp  translator_cdecl.hpp  translator_stdcall.hpp  xtranslator.hpp  xtranslator_path.hpp
src/plugins/std-bank/: CAECustomBankLoader.cpp  CMakeLists.txt  CWaveLoader.hpp  bank.cpp  bank.h
src/plugins/std-cleo/: CMakeLists.txt  cleo.cpp
src/plugins/std-data/: CMakeLists.txt  data.cpp  data.h  file_detour.hpp  file_mixer.hpp  handling.cpp  ipl.cpp  readme.cpp  readme.hpp  traits.hpp
src/plugins/std-data/data/: carmods.h  gta.h  handling.h  ide.h  ipl.h  plants.h  ranges.h  traits.h  water.h
src/plugins/std-fx/: CMakeLists.txt  fx.cpp
src/plugins/std-img/: CMakeLists.txt  CMakeLists.txt~  backend.c  backend.s  hooks.cpp  hooks.cpp~  hooks.s  img.cpp  img.h  streaming.cpp
src/plugins/std-movies/: CMakeLists.txt  movies.cpp
src/plugins/std-sala/: CMakeLists.txt  sacky.cpp  sacky.hpp  sala.cpp  sala.h  sala.hpp
src/plugins/std-scm/: CMakeLists.txt  scm.cpp
src/plugins/std-sprites/: CMakeLists.txt  sprites.cpp
src/plugins/std-text/: CMakeLists.txt  text.cpp
src/plugins/std-tracks/: CMakeLists.txt  tracks.cpp
src/plugins/std.asi/: CMakeLists.txt
src/plugins/std.bank/: bank.h
src/plugins/std.data/: data.h  file_mixer.hpp  readme.hpp  traits.hpp
src/plugins/std.data/data/: water.h
src/plugins/std.img/: img.h
src/plugins/std.movies/: CMakeLists.txt
src/plugins/std.text/: CMakeLists.txt  text.cpp
src/shared/: CWavePCM.hpp  cdstreamsync.hpp  cdstreamsync.inl  charov.hpp  debugger.hpp  dummy.cpp  file_block.hpp  unicode.hpp
src/shared/cereal/: what.txt
src/shared/cereal/types/: boost_any.hpp  boost_optional.hpp  typeindex.hpp
src/shared/datalib/: data_slice.hpp  data_store.hpp  dominance.hpp
src/shared/datalib/data_info/: array.hpp  default.hpp  deque.hpp  dyncontainer.hpp  either.hpp  hex.hpp  integral_constant.hpp  list.hpp  multiset.hpp  optional.hpp  pair.hpp  set.hpp  string.hpp  tagged_type.hpp  tuple.hpp  unordered_multiset.hpp  unordered_set.hpp  vector.hpp
src/shared/datalib/detail/: either.hpp  flat_linear_map.hpp  linear_map.hpp
src/shared/datalib/gta3/: data_section.hpp  data_store.hpp  io.hpp
src/shared/datalib/io/: array.hpp  dyncontainer.hpp  enum.hpp  ignore.hpp  optional.hpp  pair.hpp  tagged_type.hpp  tuple.hpp
src/shared/f92la/: f92la.h
src/shared/fxt_parser/: fxt.hpp  fxt_parser.hpp
src/shared/game/gta3/: CAEBankLoader.h  CAETrackLoader.h  CDirectory.h  CStreamingInfo.h  CdStreamInfo.h
src/shared/interfaces/gta3/: std.stream.hpp
src/shared/regex/: fregex.hpp  regex.hpp
src/shared/stdinc/: stdinc.cpp  stdinc.hpp
src/shared/stdinc/gta3/: stdinc.hpp
src/shared/traits/gta3/: base.hpp  iii.hpp  sa.hpp  vc.hpp
src/shared/type_wrapper/: floating_point.hpp
src/structs/gta3/: CStreamingInfo.h  CdStreamInfo.h
src/traits/gta3/: base.hpp  sa.hpp
src/traits/traits/gta3/: sa.hpp
src/translator/: translator.cpp
src/translator/gta3/3/: 10.hpp  re3.hpp
src/util/: CWavePCM.hpp  ordered_map.hpp
(+234 files in other folders)
