# Standard Plugins
# Sorted by time that it takes to build! From the fastest to the slowest.
add_subdirectory(std-movies)
add_subdirectory(std-scm)
add_subdirectory(std-sprites)
add_subdirectory(std-fx)
add_subdirectory(std-text)
#add_subdirectory(std-sala)
add_subdirectory(std-asi)
add_subdirectory(std-cleo)
add_subdirectory(std-img)
add_subdirectory(std-data)
