# Standard Plugins
# Sorted by time that it takes to build! From the fastest to the slowest.
#add_subdirectory(std.movies)  - REDO
#add_subdirectory(std.scm)     - REDO
#add_subdirectory(std.sprites) - REDO
add_subdirectory(std.fx)
add_subdirectory(std.text)
#add_subdirectory(std.tracks)  - TODO
#add_subdirectory(std.bank)    - REDO
#add_subdirectory(std.img)     - REDO
#add_subdirectory(std.asi)     - REDO
#add_subdirectory(std.data)    - REDO
