# Standard Plugins
# Sorted by time that it takes to build! From the fastest to the slowest.
add_subdirectory(std.movies)
add_subdirectory(std.scm)
add_subdirectory(std.sprites)
add_subdirectory(std.fx)
add_subdirectory(std.text)
#add_subdirectory(std.tracks)  - TODO
add_subdirectory(std.bank)
add_subdirectory(std.stream)
add_subdirectory(std.asi)
#add_subdirectory(std.data)    - TODO
